# aceitche-cripto

./: .gitignore  CNAME  Cargo.toml  Dockerfile  Makefile  README.md  common.css  consult.css  docker-compose.yml  guardiao.html  index.css  index.html
cluster/: 0_config_envs.sh  1_config_cluster.sh  2_config_alb.sh  adminer.yml  app.yml  ingress.yml  psql.yml  storage.yml
manifest/: adminer.yml  app.yml  backend.yml  ingress.yml  psql.yml  storage.yml
nginx/: Dockerfile  aceitchecripto.com  consult.aceitchecripto.com  fake_ssl.conf  nginx.conf  pay.aceitchecripto.com
nginx/aceitchecripto.com/: aceitchecripto.com
nginx/aceitchecripto.com/ssl/: crt.pem
nginx/pay.aceitchecripto.com/ssl/: key.pem
nginx/ssl/: dhparams.pem
sql/: init.sql
src/: actions.rs  app_config.rs  common.css  consult.css  consult.html  data.rs  db.rs  free_time.rs  handlers.rs  index.css  index.html  main.rs  version.rs
src/css/: index.css
src/frontend/: common.css  consult.html  consult_received.html  index.html
src/html/: consult.html  index.html
